src/tui/tests/snapshots/bmm__tui__tests__tags__empty_tag_list_shows_no_tags.snap
---
source: src/tui/tests/tags.rs
expression: terminal.backend()
---
"                                                                                                "
"   no tags                                                                                      "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
" bmm                                                                                            "
