src/tui/tests/snapshots/bmm__tui__tests__tags__failed_bookmark_fetch_for_tag_preserves_tags_and_shows_an_error.snap
---
source: src/tui/tests/tags.rs
expression: terminal.backend()
---
"                                                                                                                        "
"   tags  (5)                                                                                                            "
"                                                                                                                        "
"  rust                                                                                                                  "
"> programming                                                                                                           "
"  books                                                                                                                 "
"  reference                                                                                                             "
"  tools                                                                                                                 "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"┌ details ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"│ Number of bookmarks : 4                                                                                              │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" bmm  couldn't execute query (fetch bookmarks for tag): encountered unexpected or invalid data: database unavailable    "
