src/tui/tests/snapshots/bmm__tui__tests__tags__failed_tag_fetch_shows_an_error.snap
---
source: src/tui/tests/tags.rs
expression: terminal.backend()
---
"                                                                                                                        "
"   no tags                                                                                                              "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" bmm  couldn't execute query (fetch tags): encountered unexpected or invalid data: database unavailable                 "
