src/tui/tests/snapshots/bmm__tui__tests__tags__moving_to_the_next_tag_updates_the_selection.snap
---
source: src/tui/tests/tags.rs
expression: terminal.backend()
---
"                                                                                                "
"   tags  (5)                                                                                    "
"                                                                                                "
"  rust                                                                                          "
"> programming                                                                                   "
"  books                                                                                         "
"  reference                                                                                     "
"  tools                                                                                         "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"┌ details ─────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                              │"
"│ Number of bookmarks : 4                                                                      │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" bmm                                                                                            "
