src/tui/tests/snapshots/bmm__tui__tests__tags__opening_tui_with_tags_displays_available_tags.snap
---
source: src/tui/tests/tags.rs
expression: terminal.backend()
---
"                                                                                                "
"   tags  (5)                                                                                    "
"                                                                                                "
"> rust                                                                                          "
"  programming                                                                                   "
"  books                                                                                         "
"  reference                                                                                     "
"  tools                                                                                         "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"┌ details ─────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                              │"
"│ Number of bookmarks : 5                                                                      │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" bmm                                                                                            "
