src/tui/tests/snapshots/bmm__tui__tests__tags__selecting_a_tag_after_closing_initial_search_displays_its_bookmarks.snap
---
source: src/tui/tests/tags.rs
expression: terminal.backend()
---
"                                                                                                "
"   bookmarks  (2)                                                                               "
"                                                                                                "
"> https://www.rust-lang.org/                                                                    "
"  https://doc.rust-lang.org/book/                                                               "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"┌ details ─────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                              │"
"│ URI   : https://www.rust-lang.org/                                                           │"
"│ Title : Rust                                                                                 │"
"│ Tags  : rust,programming                                                                     │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" bmm                                                                                            "
