src/tui/tests/snapshots/bmm__tui__tests__tags__selecting_a_tag_displays_its_bookmarks.snap
---
source: src/tui/tests/tags.rs
expression: terminal.backend()
---
"                                                                                                "
"   bookmarks  (3)                                                                               "
"                                                                                                "
"> https://www.rust-lang.org/                                                                    "
"  https://doc.rust-lang.org/book/                                                               "
"  https://gleam.run/                                                                            "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"┌ details ─────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                              │"
"│ URI   : https://www.rust-lang.org/                                                           │"
"│ Title : Rust                                                                                 │"
"│ Tags  : rust,programming                                                                     │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" bmm                                                                                            "
